kubernetes/deployment.yml
apiVersion:  apps/v1
kind: Deployment
metadata:
  name: web-deployment
  labels:
    app: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web-pod
        imagePullPolicy: IfNotPresent
        image: django_app:latest
        ports:
          - containerPort: 80
            protocol: TCP
            name: web-pod
