kubernetes/deployment+service.yml
apiVersion:  apps/v1
kind: Deployment
metadata:
  name: web-deployment
  labels:
    app: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web-pod
        image: myapp:v1
        ports:
          - containerPort: 80
            protocol: TCP
            name: web-pod
---
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  type: NodePort
  selector:
    app: web
  ports:
  - name: name-of-service-port
    protocol: TCP
    port: 80
    nodePort: 30007
