kubernetes/pod+service.yml
apiVersion: v1
kind: Pod
metadata:
  name: web
  labels:
    app.kubernetes.io/name: web
spec:
  containers:
  - name: django
    image: myapp:v1
    ports:
      - containerPort: 80
        protocol: TCP
        name: web-pod
---
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: web
  ports:
  - name: name-of-service-port
    protocol: TCP
    port: 80
    nodePort: 30007
