kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  type: NodePort
  selector:
    app: web
  ports:
  - name: name-of-service-port
    protocol: TCP
    port: 80
    nodePort: 30007
